# samurai

./: CMakeLists.txt
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark_add_neigh.cpp  benchmark_add_neigh_1d.cpp  benchmark_add_neigh_2d.cpp  benchmark_celllist_construction.cpp  benchmark_laplacian.cpp  benchmark_search.cpp
cmake/: addGoogleTest.cmake
demos/: CMakeLists.txt
demos/FiniteVolume/: advection_1d.cpp  advection_2d.cpp  level_set.cpp  level_set_from_scratch.cpp
demos/LBM/: D2Q4444_Euler_Lax_Liu.cpp
demos/openmp/: CMakeLists.txt  test_openmp.cpp
demos/tutorial/: CMakeLists.txt
include/samurai/: algorithm.hpp  bc.hpp  boundary.hpp  cell_array.hpp  field.hpp  graduation.hpp  hdf5.hpp  interface.hpp  interval.hpp  level_cell_array.hpp  level_cell_list.hpp  mesh.hpp  samurai_config.hpp  statistics.hpp  stencil.hpp  uniform_mesh.hpp  utils.hpp
include/samurai/algorithm/: graduation.hpp  update.hpp
include/samurai/amr/: mesh.hpp
include/samurai/mr/: adapt.hpp  criteria.hpp  mesh.hpp  mesh_overleaves.hpp  operators.hpp  pred_and_proj.hpp
include/samurai/numeric/: prediction.hpp
include/samurai/petsc/: nonlinear_local_solvers.hpp
include/samurai/schemes/fv/: utils.hpp
include/samurai/storage/: utils.hpp
include/samurai/storage/eigen/: eigen.hpp
include/samurai/storage/xtensor/: xtensor.hpp
include/samurai/subset/: node_op.hpp
include/samurai/subset_pointer/: node_op.hpp
test/: CMakeLists.txt  test_node_op.cpp
tests/: CMakeLists.txt  test_adapt.cpp
(+5 files in other folders)
